force-app/main/default/objects/DocGen_Button__mdt/DocGen_Button__mdt.object-meta.xml
<CustomObject>
    <label>Portwood Button</label>
    <pluralLabel>Portwood Buttons</pluralLabel>
</CustomObject>