force-app/main/default/objects/DocGen_Button__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Only active configurations are offered on the button.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>