force-app/main/default/objects/DocGen_Button__mdt/fields/Document_Title__c.field-meta.xml
<CustomField>
    <fullName>Document_Title__c</fullName>
    <label>Document Title</label>
    <description>Optional. Override the generated file name. Leave blank to use the template default.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>