force-app/main/default/objects/DocGen_Button__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <description
    >API name of the object whose record page hosts the button (e.g., sm1a__WorkOrder__c). Used to match the record context.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>