force-app/main/default/objects/DocGen_Button__mdt/fields/Output_Format_Override__c.field-meta.xml
<CustomField>
    <fullName>Output_Format_Override__c</fullName>
    <label>Output Format Override</label>
    <description>Optional. Override the template Output Format at runtime: PDF, Word, or PowerPoint. Leave blank for the template default. Ignored/errors if the template has Lock Output Format = true.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>