force-app/main/default/objects/DocGen_Button__mdt/fields/Record_Type_Developer_Names__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Names__c</fullName>
    <label>Record Type Developer Names</label>
    <description
    >Comma-separated RecordType Developer Names this button applies to (e.g., Standard_Invoice, Credit_Note), matched against the record's record type. Leave blank to apply to all record types of the object.</description>
    <inlineHelpText
    >Comma-separated RecordType Developer Names this button applies to. Leave blank to show for every record type of the object.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>