force-app/main/default/objects/DocGen_Button__mdt/fields/Save_To_Record__c.field-meta.xml
<CustomField>
    <fullName>Save_To_Record__c</fullName>
    <label>Save To Record</label>
    <description>If checked, the generated file is attached to the source record (Files related list). Either way it is downloaded.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>