force-app/main/default/objects/DocGen_Button__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Optional. Orders buttons in the picker when an object has more than one configuration.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>