force-app/main/default/objects/DocGen_Button__mdt/fields/Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_API_Name__c</fullName>
    <label>Template API Name</label>
    <description
    >API Name of the Portwood Template to generate (the template's API Name field). Environment-stable alternative to Template Id — the same value works in sandbox and production, so button configs deploy cleanly. Used when Template Id is blank.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>