force-app/main/default/objects/DocGen_Button__mdt/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>Template Id</label>
    <description
    >Record Id of the Portwood Template (DocGen_Template__c) to generate. Org-specific — prefer Template API Name for configs that deploy between environments. Provide this OR Template API Name.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>